2005-11-10  Alan Mackenzie  <acm@muc.de>

	* help-fns.el (describe-variable): Make C-h v work when a variable
	has variable documentation yet is unbound.

2005-11-10  Masatake YAMATO  <jet@gyve.org>

	* man.el (Man-highlight-references): Set an empty
	string to `Man-arguments' if it is nil.
	Suggested by Reiner Steib <reinersteib+gmane@imap.cc>.

2005-11-09  Richard M. Stallman  <rms@gnu.org>

	* apropos.el (apropos-pattern): Renamed from apropos-regexp.
	(apropos-orig-pattern): Renamed from apropos-orig-regexp.
	All uses changed.
	(apropos-rewrite-regexp): Doc fix.
	(apropos-variable, apropos-command, apropos, apropos-value): 
	Change prompt; carry through the argument renaming.

2005-11-09  Luc Teirlinck  <teirllm@auburn.edu>

	* find-lisp.el: Require dired.
	(find-lisp-find-dired-internal): Do not call
	`abbreviate-file-name' on DIR.

2005-11-10  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gdb): Make gud-pp use user-defined command pp1.

2005-11-09  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-menu-map): Ensure tool-bar is constant
	when using the speedbar.
	(gdb): New command gud-pp.
	(gud-menu-map, gud-tool-bar-map): Put it on the tool bar.

2005-11-09  Juri Linkov  <juri@jurta.org>

	* replace.el (occur-excluded-properties): New defcustom.
	(occur-1, occur-engine, occur-accumulate-lines): Use it.

2005-11-08  Jay Belanger  <belanger@truman.edu>

	* calc/calc-units.el (math-convert-units): Replace any composite
	unit by its definition.

2005-11-08 Lars Hansen <larsh@soem.dk>

	* emacs-lisp/autoload.el (update-directory-autoloads):
	Add obsolete function alias.

2005-11-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/lisp-mode.el (lisp-mode-variables): Don't set
	comment-indent-function.
	(lisp-comment-indent): Replace by an alias for comment-indent-default.

	* reveal.el (reveal-post-command): Rework the handling of
	reveal-open-spots, so as to be more reliable.  There were several